# ThatCord

./: README.md  compile.bat  package-lock.json  package.json
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
