[package]
name = "thatcord"
version = "0.3.0"
description = "ThatCord is a minimalized discord client that uses Tauri instead of Electron."
authors = ["Ztrolix"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serenity = "0.10"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.50"
tauri = { version = "1.5", features = [ "process-relaunch", "system-tray", "shell-open", "path-all", "notification-all"] }
serde = { version = "1.0", features = ["derive"] }
async-recursion = "1.0.4"
include-flate = "0.3.0"
serde_json = "1.0"
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-deep-link = { version = "^0.1.2" }
reqwest = { version = "0.11.14", features = ["blocking"] }
dirs = "5.0.1"
base64 = "0.13.0"
device_query = "1.1.3"
sysinfo = "0.29.10"
auto-launch = "0.5.0"
rsrpc = { git = "https://www.github.com/SpikeHD/rsRPC", branch = "0.9.0" }
window_titles = { git = "https://github.com/SpikeHD/window_titles", branch = "master" }
webview2-com = "0.19.0"
windows-implement = "0.37.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.39.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]

[features]
custom-protocol = ["tauri/custom-protocol"]
